[gd_scene load_steps=7 format=3 uid="uid://f6eo3tvb73v6"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_cbqtb"]
[ext_resource type="PackedScene" uid="uid://drwgaquxkiqi3" path="res://scenes/number_input.tscn" id="2_amx8n"]
[ext_resource type="Script" path="res://scripts/score_input_container.gd" id="2_ugd7f"]
[ext_resource type="Script" path="res://scripts/player_input_container.gd" id="4_oyjr1"]

[sub_resource type="InputEventAction" id="InputEventAction_f32lx"]
action = &"accept"

[sub_resource type="Shortcut" id="Shortcut_jj66o"]
events = [SubResource("InputEventAction_f32lx")]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_cbqtb")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 203.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "PONG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -27.0
offset_right = 48.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_jj66o")
text = "Play"

[node name="ScoreInputContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -59.0
offset_right = 123.5
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("2_ugd7f")

[node name="ScoreInput" parent="ScoreInputContainer" instance=ExtResource("2_amx8n")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AcceptButton" type="Button" parent="ScoreInputContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="PlayerInputContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -59.0
offset_right = 165.5
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_oyjr1")

[node name="PlayerButton" type="Button" parent="PlayerInputContainer"]
layout_mode = 2
text = "Player vs Player"

[node name="AIButton" type="Button" parent="PlayerInputContainer"]
layout_mode = 2
text = "Player vs AI"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="winning_score_selected" from="ScoreInputContainer" to="." method="_on_winning_score_selected"]
[connection signal="pressed" from="ScoreInputContainer/AcceptButton" to="ScoreInputContainer" method="_on_accept_button_pressed"]
[connection signal="players_selected" from="PlayerInputContainer" to="." method="_on_players_selected"]
[connection signal="pressed" from="PlayerInputContainer/PlayerButton" to="PlayerInputContainer" method="_on_player_button_pressed"]
[connection signal="pressed" from="PlayerInputContainer/AIButton" to="PlayerInputContainer" method="_on_ai_button_pressed"]
